libavformat/avidec.c
@@ -1141,7 +1141,7 @@ start_sync:
             goto start_sync;
         }
 
-        n = avi->dv_demux ? 0 : get_stream_idx(d);
+        n = get_stream_idx(d);
 
         if (!((i - avi->last_pkt_pos) & 1) &&
             get_stream_idx(d + 1) < s->nb_streams)
@@ -1152,6 +1152,9 @@ start_sync:
             avio_skip(pb, size);
             goto start_sync;
         }
+
+        if (avi->dv_demux && n != 0)
+            continue;
 
         // parse ##dc/##wb
         if (n < s->nb_streams) {
